feat: shar items (full feature)
Share items with exisitng users in a many-to-many fashion or a one-to-many fashion.

Revoke invitations to some or all users, also revoke all invitations upon item deletion

Sync item updates across shared items

Shared items are encrypted with the recepients' public keys

--- a/assets/base.scss
+++ b/assets/base.scss
@@ -25,3 +25,11 @@
     grid-template-columns: repeat(4, 200px);
   }
 }
+
+.highlight-on-hover:hover {
+  background-color: #ebebeb80;
+}
+
+.gray-bottom-border {
+  border-bottom: 1px solid #d2d4d58e;
+}
